<resources>
    <string name="app_name">Assignment On DB Contacts App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="contact_first_name_hint">First Name</string>
    <string name="contact_last_name_hint">Last Name</string>
    <string name="contact_email_hint">Email</string>
    <string name="contact_phone_hint">Phone Number</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="favourite_label">Add To Favourites</string>

    <string name="all_contacts">Contacts</string>
    <string name="fav_contacts">Favourite</string>
    <string name="search_title">Search</string>

    <string-array name="phone_no_type_menu_items">
        <item>Home</item>
        <item>Work</item>
        <item>Emergency</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
