<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.w3e.nixonok.assignmentondbcontactsapp.AddContactActivity"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="horizontal" android:id="@+id/ScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/contact_first_name_hint"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent"
            android:ems="10"
            android:id="@+id/contact_first_name"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/contact_last_name_hint"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent"
            android:ems="10"
            android:id="@+id/contact_last_name"
            />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/contact_email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            android:ems="10"
            android:id="@+id/contact_email"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/contact_phone_hint"
            android:inputType="phone"
            android:textColorHint="@color/colorAccent"
            android:ems="10"
            android:id="@+id/contact_phone"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/phone_no_type_spinner"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textColorHint="@color/colorAccent"
        />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_label"
            android:id="@+id/contact_favourite"
            />

    </LinearLayout>

    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
